--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,9 +19,6 @@ android {
     }
 }
 
-//apply plugin: 'com.google.gms.google-services'
-
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
@@ -29,11 +26,19 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'com.google.firebase:firebase-firestore:21.0.0'
-    implementation 'com.google.firebase:firebase-auth:19.0.0'
-    implementation 'com.google.firebase:firebase-analytics:17.2.0'
-    implementation 'com.google.firebase:firebase-core:16.0.6'
-    implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
+    implementation 'com.google.android.gms:play-services-places:15.0.1'
+
+     // Add the Firebase SDK for Google Analytics
+      implementation 'com.google.firebase:firebase-analytics:17.2.0'
+
+      // Add the SDKs for any other Firebase products you want to use in your app
+      // For example, to use Firebase Authentication and Cloud Firestore
+      implementation 'com.google.firebase:firebase-auth:19.0.0'
+      implementation 'com.google.firebase:firebase-firestore:21.0.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
+
 
 
